--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
       - .:/var/www
       - /var/www/vendor    # Prevents overwriting vendor directory
       - /var/www/node_modules  # Prevents overwriting node_modules
+
       - ./storage/app/public/:/var/www/storage/app/public/
+
     ports:
-      - "8000:8000"  # Laravel API
       - "5173:5173"  # Vite (React frontend)
     env_file:
       - .env
@@ -19,7 +20,7 @@ services:
       - DB_HOST=${DB_HOST}
     depends_on:
       - db
-    command: ["sh", "-c", "php artisan storage:link && docker/wait-for-db.sh && npm run dev & php-fpm -F "]
+    command: ["sh", "-c", "php artisan storage:link &&  php-fpm -F "]
 
 
 
@@ -43,6 +44,7 @@ services:
     volumes:
       - ./docker/nginx/silentQuest.conf:/etc/nginx/conf.d/silentQuest.conf
       - ./public:/var/www/public
+      - ./storage/app/public:/var/www/public/storage
       - ./storage:/var/www/storage
     ports:
       - "80:80"
