--- a/docker/nginx/silentQuest.conf
+++ b/docker/nginx/silentQuest.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name ec2-3-0-90-216.ap-southeast-1.compute.amazonaws.com;
 
     root /var/www/public;
     index index.php index.html;
